tests/errors/lifetime/loan/switch_on_loaned_enum_conflicts.sim

        enum Sel: Copy + Drop { A: unit B: unit }
        extern fn sink(r: &mut Sel);
        fn f(e: Sel) {
          r: &mut Sel;
          entry:
            r = &mut e;
            switchEnum(e) [A: a_lbl, B: b_lbl]
          a_lbl:
            call sink(move r);
            return
          b_lbl:
            call sink(move r);
            return
        }
        